// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<ContentPadding
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#f3f3f3",
        "flexDirection": "row",
        "height": 40,
      },
      Object {
        "borderWidth": 0,
        "elevation": 3,
        "marginBottom": 6,
        "shadowColor": "rgba(0, 0, 0, 0.14)",
        "shadowOffset": Object {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 3,
      },
    ]
  }
>
  <Text
    allowFontScaling={true}
    markdown={false}
    style={
      Object {
        "color": "rgb(45, 47, 127)",
      }
    }
    type="h2"
  >
    Section Header
  </Text>
  <View />
</ContentPadding>
`;

exports[`renders correctly with badge text 1`] = `
<ContentPadding
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#f3f3f3",
        "flexDirection": "row",
        "height": 40,
      },
      Object {
        "borderWidth": 0,
        "elevation": 3,
        "marginBottom": 6,
        "shadowColor": "rgba(0, 0, 0, 0.14)",
        "shadowOffset": Object {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 3,
      },
    ]
  }
>
  <Text
    allowFontScaling={true}
    markdown={false}
    style={
      Object {
        "color": "rgb(45, 47, 127)",
      }
    }
    type="h2"
  >
    Section Header
  </Text>
  <View />
</ContentPadding>
`;

exports[`renders correctly without shadow 1`] = `
<ContentPadding
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#f3f3f3",
      "flexDirection": "row",
      "height": 40,
    }
  }
>
  <Text
    allowFontScaling={true}
    markdown={false}
    style={
      Object {
        "color": "rgb(45, 47, 127)",
      }
    }
    type="h2"
  >
    Section Header
  </Text>
  <View />
</ContentPadding>
`;
